Tested Trade Profile

--- a/OptionsBuildFeatures.ipynb
+++ b/OptionsBuildFeatures.ipynb
@@ -597,57 +597,59 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10400, 42)\n",
-      "   stock_price_at_STO_offer  STO_ask_fee STO_ask_fee_type  \\\n",
-      "0                     81.82        1.940              Mid   \n",
-      "1                     81.81        1.935              Mid   \n",
-      "2                     81.53        1.655              Mid   \n",
-      "3                     81.87        1.910              Mid   \n",
-      "4                     81.82        1.865              Mid   \n",
+      "(7537, 38)\n",
+      "   Unnamed: 0  stock_price_at_STO_offer  STO_ask_fee STO_ask_fee_type  \\\n",
+      "0           0                     81.82        1.940              Mid   \n",
+      "1           1                     81.81        1.935              Mid   \n",
+      "2           2                     81.53        1.655              Mid   \n",
+      "3           3                     81.87        1.910              Mid   \n",
+      "4           4                     81.82        1.865              Mid   \n",
       "\n",
       "    STO_offer_datetime  STO_strike  STO_expiry_datetime  STO_days_long  \\\n",
-      "0  2017-05-01 11:30:00        80.0  2017-05-12 16:00:00             11   \n",
-      "1  2017-05-01 13:30:00        80.0  2017-05-12 16:00:00             11   \n",
-      "2  2017-05-04 13:30:00        80.0  2017-05-12 16:00:00              8   \n",
-      "3  2017-05-05 11:30:00        80.0  2017-05-12 16:00:00              7   \n",
-      "4  2017-05-05 13:30:00        80.0  2017-05-12 16:00:00              7   \n",
+      "0  2017-05-01 11:30:00        80.0  2017-05-12 16:00:00           11.0   \n",
+      "1  2017-05-01 13:30:00        80.0  2017-05-12 16:00:00           11.0   \n",
+      "2  2017-05-04 13:30:00        80.0  2017-05-12 16:00:00            8.0   \n",
+      "3  2017-05-05 11:30:00        80.0  2017-05-12 16:00:00            7.0   \n",
+      "4  2017-05-05 13:30:00        80.0  2017-05-12 16:00:00            7.0   \n",
       "\n",
-      "   STO_offer_ARR  STO_offer_TQI  STO_offer_strike_delta  ... STO_close_TQI  \\\n",
-      "0       0.786760      -1.431904                   -1.82  ...           NaN   \n",
-      "1       0.784828      -1.420540                   -1.81  ...           NaN   \n",
-      "2       0.926154      -1.417016                   -1.53  ...           NaN   \n",
-      "3       1.216476      -2.274809                   -1.87  ...           NaN   \n",
-      "4       1.188541      -2.163145                   -1.82  ...           NaN   \n",
+      "   STO_offer_ARR  STO_offer_TQI  ...  STO_close_strike_delta BTC_close_commsn  \\\n",
+      "0       0.786760      -1.431904  ...                     NaN              NaN   \n",
+      "1       0.784828      -1.420540  ...                     NaN              NaN   \n",
+      "2       0.926154      -1.417016  ...                     NaN              NaN   \n",
+      "3       1.216476      -2.274809  ...                     NaN              NaN   \n",
+      "4       1.188541      -2.163145  ...                     NaN              NaN   \n",
       "\n",
-      "   Called_close_fee Called_close_commsn  Called_close_proceeds  \\\n",
-      "0             -2.53                10.0                -2540.0   \n",
-      "1             -2.53                10.0                -2540.0   \n",
-      "2             -2.53                10.0                -2540.0   \n",
-      "3             -2.53                10.0                -2540.0   \n",
-      "4             -2.53                10.0                -2540.0   \n",
+      "   BTC_close_proceeds   STO_close_datetime  STO_close_ARR  STO_close_TQI  \\\n",
+      "0                 NaN  2017-05-12 16:00:00            NaN            NaN   \n",
+      "1                 NaN  2017-05-12 16:00:00            NaN            NaN   \n",
+      "2                 NaN  2017-05-12 16:00:00            NaN            NaN   \n",
+      "3                 NaN  2017-05-12 16:00:00            NaN            NaN   \n",
+      "4                 NaN  2017-05-12 16:00:00            NaN            NaN   \n",
       "\n",
-      "   STO_xtn_net_proceeds  STO_ask_fee%  STO_offer_strike_delta%  \\\n",
-      "0                -610.0      0.023711                -0.022244   \n",
-      "1                -615.0      0.023652                -0.022124   \n",
-      "2                -895.0      0.020299                -0.018766   \n",
-      "3                -640.0      0.023330                -0.022841   \n",
-      "4                -685.0      0.022794                -0.022244   \n",
+      "   Called_close_fee  Called_close_commsn  Called_close_proceeds  \\\n",
+      "0             -2.53                 10.0                -2540.0   \n",
+      "1             -2.53                 10.0                -2540.0   \n",
+      "2             -2.53                 10.0                -2540.0   \n",
+      "3             -2.53                 10.0                -2540.0   \n",
+      "4             -2.53                 10.0                -2540.0   \n",
       "\n",
-      "   STO_open_strike_delta%  Closed_xtn_Profit$  Closed_xtn_Profit%  \n",
-      "0               -0.025579              -610.0           -0.316062  \n",
-      "1               -0.025579              -615.0           -0.319481  \n",
-      "2               -0.021047              -895.0           -0.544073  \n",
-      "3               -0.023676              -640.0           -0.336842  \n",
-      "4               -0.023676              -685.0           -0.369272  \n",
+      "   STO_xtn_net_proceeds  \n",
+      "0                -610.0  \n",
+      "1                -615.0  \n",
+      "2                -895.0  \n",
+      "3                -640.0  \n",
+      "4                -685.0  \n",
       "\n",
-      "[5 rows x 42 columns]\n",
-      "coluumn names =  ['stock_price_at_STO_offer', 'STO_ask_fee', 'STO_ask_fee_type', 'STO_offer_datetime', 'STO_strike', 'STO_expiry_datetime', 'STO_days_long', 'STO_offer_ARR', 'STO_offer_TQI', 'STO_offer_strike_delta', 'STO_xtn_state', 'STO_contracts', 'option_type', 'stock_price_BTC_offer', 'BTC_bid_fee', 'BTC_bid_fee_type', 'BTC_offer_datetime', 'BTC_contracts', 'stock_price_at_open', 'STO_open_fee', 'STO_open_commsn', 'STO_open_proceeds', 'STO_open_datetime', 'STO_open_ARR', 'STO_open_TQI', 'STO_open_strike_delta', 'stock_price_at_close', 'STO_close_strike_delta', 'BTC_close_commsn', 'BTC_close_proceeds', 'STO_close_datetime', 'STO_close_ARR', 'STO_close_TQI', 'Called_close_fee', 'Called_close_commsn', 'Called_close_proceeds', 'STO_xtn_net_proceeds', 'STO_ask_fee%', 'STO_offer_strike_delta%', 'STO_open_strike_delta%', 'Closed_xtn_Profit$', 'Closed_xtn_Profit%']\n"
+      "[5 rows x 38 columns]\n",
+      "coluumn names =  ['Unnamed: 0', 'stock_price_at_STO_offer', 'STO_ask_fee', 'STO_ask_fee_type', 'STO_offer_datetime', 'STO_strike', 'STO_expiry_datetime', 'STO_days_long', 'STO_offer_ARR', 'STO_offer_TQI', 'STO_offer_strike_delta', 'STO_xtn_state', 'STO_contracts', 'option_type', 'stock_price_BTC_offer', 'BTC_bid_fee', 'BTC_bid_fee_type', 'BTC_offer_datetime', 'BTC_contracts', 'stock_price_at_open', 'STO_open_fee', 'STO_open_commsn', 'STO_open_proceeds', 'STO_open_datetime', 'STO_open_ARR', 'STO_open_TQI', 'STO_open_strike_delta', 'stock_price_at_close', 'STO_close_strike_delta', 'BTC_close_commsn', 'BTC_close_proceeds', 'STO_close_datetime', 'STO_close_ARR', 'STO_close_TQI', 'Called_close_fee', 'Called_close_commsn', 'Called_close_proceeds', 'STO_xtn_net_proceeds']\n"
      ]
     }
    ],
@@ -700,7 +702,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all_columns size is  (10400, 71)\n"
+      "all_columns size is  (7537, 67)\n"
      ]
     }
    ],
