--- a/DataGlue040.ipynb
+++ b/DataGlue040.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# DataGlue v040\n",
     "Moved to Jupyter Notebook 5/11/20\n",
-    "\n",
-    "5/17 - Running up to SelectKBest feature selection.\n",
-    "       Add feature selector code from other notebook.\n",
+    "5/24/20 - Running. Added Trade Profile section to select trades with min/max specs on some trade features.\n",
+    "5/17    - Running up to SelectKBest feature selection.\n",
+    "          Add feature selector code from other notebook.\n",
     "\n",
     "Done 1. Apply Trade Profile to xtns.\n",
     "Done 2. Create stock features - SMAs, velocities, oscillators - MACD, RSI, MFI, etc, Days to ER\n",
@@ -591,6 +591,33 @@
     "xtns = pd.read_csv('closed_xtns_.csv', index_col = False)\n",
     "# Apply Trade Profile Rules.\n",
     "MIN_FEE = 0.50 # sets minimum fee $, not minimum fee %\n",
+    "\n",
+    "# ++++++++++\n",
+    "#\n",
+    "# Profile Mask - Selects xtns according to the Trade Profile.\n",
+    "# Trade Profile excludes trade records (rows) that do not meet a specific set of criteria, which is the Trade Profile.\n",
+    "# Note Profile mask incluees only information known at the time of trade - no future information leakage.\n",
+    "#\n",
+    "# ++++++++++\n",
+    "\n",
+    "MIN_FEE = 0.50       # sets minimum fee $, not minimum fee %\n",
+    "OFFER_FEE = 0.60     # calculated as % between buy/sell offers. Can construct different offer calcs.\n",
+    "                     # Can construct OFFER_FEES for each open combo - CSTO, CBTO, PSTO, PBTO\n",
+    "OFFER_FEE_PCT = None\n",
+    "MIN_FEE_PCT = None\n",
+    "MIN_DAYS_OUT = None\n",
+    "MAX_DAYS_OUT = None\n",
+    "MIN_STRIKE_DELTA = None\n",
+    "MIN_STRIKE_DELTA_PCT = None\n",
+    "MAX_STRIKE_DELTA = None\n",
+    "MAX_STRIKE_DELTA_PCT = None\n",
+    "OPTION_TYPE = ['Call']         # Can include any combination of Put / Call\n",
+    "OPTION_OPEN_ACTION = ['Sell']  # Can include any combination of Buy / Sell\n",
+    "OPTION_CLOSE_ACTION= ['None']  # Can also be Buy (for SelltoOpen) or Sell (for BuytoOpen)\n",
+    "\n",
+    "# Close offers have all the same combinations as open transactions and open fees.\n",
+    "# Create combination offer conditions as needed: Iron Condor, Butterfly, calendar spread, etc.\n",
+    "\n",
     "\n",
     "profile_mask = xtns['STO_ask_fee'] > MIN_FEE\n",
     "xtns = xtns[profile_mask].copy()\n",
