Use _D1 notebooks for demos.
Fake branch with _D1 notebooks for demos. Leave them alone now.

Continue dvlpmt on other notebooks.

--- a/OptionsBuildFeatures_D1.ipynb
+++ b/OptionsBuildFeatures_D1.ipynb
@@ -957,7 +957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations. You now have a option trade quote and feature set for 10,400 option trades between April 1, 2017 and April 1, 2018. Save it as a csv file so we can use it to train and test several Learners.\n",
+    "Congratulations. You now have a option trade quote and feature set for approx. 7,500 option trades between April 1, 2017 and April 1, 2018. Save it as a csv file so we can use it to train and test several Learners.\n",
     "\n",
     "You noticed the run-time warning from Python. \n",
     " - What does this warning mean? \n",
