--- a/OptionsTrainLearners.ipynb
+++ b/OptionsTrainLearners.ipynb
@@ -8,7 +8,11 @@
     "# Notebook 3: Train Machine Learners.\n",
     "What could possibly go wrong?\n",
     "\n",
-    "5/30/2020"
+    "5/30/2020\n",
+    "\n",
+    "Internal notes \n",
+    "\n",
+    "This is the live branch from OptionsTrainLearners_D1.ipynb. Develop this one, not _D1."
    ]
   },
   {
