Set up first -D1 notebook
Fake branch for -D1 demo files.

--- a/OptionsBuildFeatures-D1.ipynb
+++ b/OptionsBuildFeatures-D1.ipynb
@@ -8,7 +8,7 @@
     "# Notebook 1: Construct a Feature Set from Stock Prices.\n",
     "What could possibly go wrong?\n",
     "\n",
-    "05/10/2020"
+    "06/01/2020 - Demo notebook."
    ]
   },
   {
