--- a/OptionsSelectFeatures-D1.ipynb
+++ b/OptionsSelectFeatures-D1.ipynb
@@ -8,7 +8,7 @@
     "## Feature Selection\n",
     "What could possibly go wrong?\n",
     "\n",
-    "5/31/2020"
+    "06/01/2020 - Demo notebook"
    ]
   },
   {
@@ -236,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
