--- a/OptionsBuildFeatures.ipynb
+++ b/OptionsBuildFeatures.ipynb
@@ -8,7 +8,7 @@
     "# Notebook 1: Construct a Feature Set from Stock Prices.\n",
     "What could possibly go wrong?\n",
     "\n",
-    "05/10/2020"
+    "06/01/2020 - Branch from _D1. D1 runs, co leave it alone as the demo. Do all add'l work in this file."
    ]
   },
   {
@@ -957,7 +957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations. You now have a option trade quote and feature set for 10,400 option trades between April 1, 2017 and April 1, 2018. Save it as a csv file so we can use it to train and test several Learners.\n",
+    "Congratulations. You now have a option trade quote and feature set for approx. 7,500 option trades between April 1, 2017 and April 1, 2018. Save it as a csv file so we can use it to train and test several Learners.\n",
     "\n",
     "You noticed the run-time warning from Python. \n",
     " - What does this warning mean? \n",
