--- a/OptionsBuildFeatures-D1.ipynb
+++ b/OptionsBuildFeatures-D1.ipynb
@@ -765,7 +765,8 @@
     "- What other features should be plotted with MFI? Why?\n",
     "- Should MACD look similar to RSI and MFI? Why or not?\n",
     "- Does MFI actually look like RSI?\n",
-    "- Describe MACD in your own words. What is MACD attempting to capture? Why is this valuable, or not?\n",
+    "- Describe MACD in your own words. What is MACD attempting to capture? What information does MACD attempt to capture?\n",
+    "- Is the information in MACD valuable? Why, or not?\n",
     "\n",
     "Code Questions\n",
     "- Does the plot clearly show the features of the MACD EMAs? Why, or not?\n",
@@ -981,7 +982,7 @@
     "Richard Barrett\n",
     "\n",
     "richard at rbshomes dot com\n",
-    "\n",
+    ".925.858.9017.\n",
     "P.S. If you got this far, you are probably pretty interested in options trading or sequenced feature data for ML. Please shoot me an email. I am eager to hear about your adventures in learning and using ML, exploring stock option trading, and especially your own ML projects. \n"
    ]
   }
