--- a/OptionsSelectFeatures-D1.ipynb
+++ b/OptionsSelectFeatures-D1.ipynb
@@ -342,15 +342,14 @@
     "- Write a function to do grouped bar charts, starting with the function in the next notebook that displays grouped bar charts. - How can you display the information in the most effective way to showcase your selection?\n",
     "\n",
     "\n",
-    "I am eager to hear of your adventures in learning ML and especially in your challenges and results in tackling your own applications for ML. Please email me with questions, comments, and results of your work. \n",
-    "\n",
-    "I love to hear stories about experiences in ML, so give me a shout.\n",
+    "I am eager to hear of your adventures in learning ML and especially in your challenges and results in tackling your own applications for ML. Please email me with questions, comments, and results of your work. I love to hear stories about experiences in ML.\n",
     "\n",
     "Best wishes for selecting powerful features!\n",
     "\n",
     "Richard Barrett\n",
     "\n",
     "richard at rbshomes dot com\n",
+    "925.858.9017.\n",
     "\n",
     "\n",
     "\n"
