--- a/OptionsTrainLearners-D1.ipynb
+++ b/OptionsTrainLearners-D1.ipynb
@@ -493,15 +493,18 @@
     "- What is the difference between accuracy and precision? What other performance metrics might be useful here?\n",
     "- Which Learner performed best on both metrics?\n",
     "- Comparing RandomForest Learners, what do the suffixes mean?\n",
-    "- Whic RandomForest did better? Why?\n",
+    "- Which RandomForest did better? Why?\n",
     "- What problems would you expect to see if we continued increasing the d parameter?\n",
     "- How can you find the best value for the d parameter?\n",
     "- Do the same comparison and analysis for the KNNeighbors numeric suffix.\n",
-    "- Why did RandomForest and KNNeighbors perform so much better than MLPerceptron and SVC?\n",
-    "- Based on the performance parameters, would you consider this exercise to be linear, nonlinear, or other? Why, why not?\n",
+    "- Why did XGBoost, RandomForest and KNNeighbors perform so much better than the other Learners?\n",
+    "- What does AdaBoost boost? What does XGBoost boost? What is boosting, anyway?\n",
+    "- How could you improve XGBoost?\n",
+    "- Based on the performance parameters, would you consider this learning challenge to be linear, nonlinear, or other? Why, why not?\n",
     "\n",
     "Code Questions:\n",
-    "- Change the parameter suffixes and corresponding parameters for KNNeighbor and RandomForest. Explain the results.\n",
+    "- Change the parameters KNNeighbor and RandomForest. Explain the results.\n",
+    "- Change the parameters for AdaBoost and XGBoost. Explain the results. \n",
     "- Test another type of classifier. Predict the results for that classifier, then run it and compare to your prediction. \n",
     "- Change the parameters for SVC and MLP. Can you improve their performance with different parameters?\n",
     "- Change the y axis of the plot to expand the performance differences of the Learners. Is that better, or just deceptive?\n"
@@ -545,7 +548,8 @@
     "- Why does SVC Linear take so long to train?\n",
     "- Why does KNNeighbors train so quickly?\n",
     "- Why does RandomForest train time increase as the d parameter increases?\n",
-    "- Why is prediction time so much faster than train time for all Learners?\n",
+    "- Why is prediction time so much faster than train time for all Learners except KN Neighbors?\n",
+    "- Why is KN Neighbors slower on prediction time?\n",
     "- Which is more important - train time or prediction time? Why? What circumstances?\n",
     "- What circumstances or requirements might change the relative importance of train time vs. prediciton time?\n",
     "- Given the execution times above, can you predict how train time will change as the training data set increases? Why?\n",
