--- a/OptionsBuildFeatures-D1.ipynb
+++ b/OptionsBuildFeatures-D1.ipynb
@@ -267,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1003,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.4rc1"
   }
  },
  "nbformat": 4,
