--- a/OptionsSelectFeatures-D1.ipynb
+++ b/OptionsSelectFeatures-D1.ipynb
@@ -223,7 +223,7 @@
     "\n",
     "Evaluation Questions\n",
     "- How does RFE work?\n",
-    "- What is the estimator. What does it do?\n",
+    "- What is the estimator? What does it do?\n",
     "\n",
     "Code Questions\n",
     "- Describe the arguments given to the RFE selector.\n",
