--- a/OptionsSelectFeatures-D1.ipynb
+++ b/OptionsSelectFeatures-D1.ipynb
@@ -16,9 +16,13 @@
    "metadata": {},
    "source": [
     "## Purpose of this Notebook - Select the Best Features from the Feature Set\n",
-    "In the first notebook in this series we created a set of features from stock price information and earnings report date. Do these features actually contain enough information for a Learner to predict profitable stock option trades? In this notebook we will evaluate the features using four techniques to determine the quality of each feature. Finally, you will choose the best features to use in training the Learners.\n",
+    "In the first notebook in this series we created a set of features to predict good stock options. These features derive from from stock price information option trade data, and company earnings report date. \n",
     "\n",
-    "Good features can help a Learner perform well. Conversely, bad features can cause many problems for a Learner, such as over-fitting and long train and test times. Leakage of future information into a feature set can cause completely erroneous results and failure of the entire project.\n",
+    "- Do these features actually contain enough information for a Learner to predict profitable stock option trades? \n",
+    "- Which features contain the most information?\n",
+    "- Are some features low value or even redundant? Extra features tend to reduce Learner performance.\n",
+    "\n",
+    "In this notebook we will evaluate the features using four techniques to determine the quality of each feature. Finally, you will choose the best features to use in training the Learners. Good features can help a Learner perform well. Conversely, bad features can cause many problems for a Learner, such as over-fitting and long times for train and test. Leakage of future information into a feature set can cause completely erroneous results and failure of the entire project.\n",
     "\n",
     "## Contents\n",
     "As discussed above, feature reduction and elimination are powerful tools to improve Learner performance. Many techniques are available, so consider these four as just a sample to get you started.\n",
@@ -347,8 +351,9 @@
     "\n",
     "Code Questions\n",
     "- Compare the rankings of each feature selector by graphing the scores with MatplotLib. \n",
-    "- Write a function to do grouped bar charts, starting with the function in the next notebook that displays grouped bar charts. - How can you display the information in the most effective way to showcase your selection?\n",
-    "\n",
+    "- Write a function to do grouped bar charts. You may start with the function in the next notebook that displays grouped bar charts. \n",
+    "- How can you display the information about each feature in in the most effective way to evaluate relative performance of each feature. How can you plot the measurement data in a grouped barchart to showcase your selection?\n",
+    "- Lists of numbers are not very helpful. Attach the featuere labels to PCA vectors, then choose the most valuable features, as measured by PCA.\n",
     "\n",
     "I am eager to hear of your adventures in learning ML and especially in your challenges and results in tackling your own applications for ML. Please email me with questions, comments, and results of your work. I love to hear stories about experiences in ML.\n",
     "\n",
