Used test_train_split
Switched to sklearn for test_train_split

--- a/OptionsPeekIntheBox-D1.ipynb
+++ b/OptionsPeekIntheBox-D1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Teach Your Laptop to Trade Stock Options.\n",
-    "# Notebook 4: Peek Inside the Black Boxes.\n",
+    "# Notebook 5: Peek Inside the Black Boxes.\n",
     "01/04/2021\n",
     "Often nachine learners act like black boxes, even magic. We collect \"eye of newt, toe of frog, \" call them features, throw them into a black cauldron (dataframe), mutter some Python incantations, then out pops the answer. It is no surprise that business execs and leaders often resist using these magical solutions. \n",
     "\n",
@@ -524,7 +524,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shapley additive Values\n"
+    "## Shapley Additive Values\n",
+    "Shapley value is a weighted average of the marginal contributions of a featrure value to the prediction in different coalitions (combinations) of features.\n",
+    "\n",
+    "Shapley value is NOT a change in the prediciton when the feature is removed.\n",
+    "\n",
+    "Shapley value has exhibits critical characteristics:\n",
+    "-Efficiency - feature contributions must sum to:\n",
+    "        delta(pred(x)) - average(predictions).\n",
+    "-Symmetry - If feature values i and j contribute equally to all possible coalitions, then Shapley value (i) = Shapley value (j).\n",
+    "-Dummy - If feature j contributes 0 to the prediction (no change in the prediction), then its Shapley value must be = 0.\n",
+    "-Additivity - for the payouts value + value*, Shapley value = x(j) + x(j*)\n",
+    "\n",
+    "Problem with Shapley is a computational explosion--2^k coalitions.   "
    ]
   },
   {
